--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "node --max_old_space_size=4096 ./node_modules/.bin/ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
